--- a/bonus/index.html
+++ b/bonus/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>50 SHADOW OF GRAY</title>
+	<title>50 SHADES OF GRAY</title>
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -25,7 +25,7 @@
 </style>
 <body>
 
-	<h1 class="text-center">50 SHADOW OF GRAY</h1>
+	<h1 class="text-center">50 SHADES OF GRAY</h1>
 	<div class="container">
 		<div class="row row-cols-2 row-cols-md-5 row-cols-lg-10 mx-auto"></div>
 	</div>
